{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 138,
  "lineage": "1fa05079-400f-eb0f-c180-e2cd53d29d54",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:loadbalancer/app/web-alb/e900b90a4378c6ea",
            "arn_suffix": "app/web-alb/e900b90a4378c6ea",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-alb-1647829312.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:loadbalancer/app/web-alb/e900b90a4378c6ea",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-01352c51575931e1b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086047f7bf6c2c069"
              },
              {
                "subnet_id": "subnet-0a45727ff0bc3eec2"
              }
            ],
            "subnets": [
              "subnet-086047f7bf6c2c069",
              "subnet-0a45727ff0bc3eec2"
            ],
            "tags": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-024732791d1f594df",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex-http-https-redirect",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:listener/app/web-alb/e900b90a4378c6ea/2c811db59f9621fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:listener/app/web-alb/e900b90a4378c6ea/2c811db59f9621fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:loadbalancer/app/web-alb/e900b90a4378c6ea",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex-instance1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:targetgroup/h120250821072217142100000007/676dab110ef16dc5",
            "arn_suffix": "targetgroup/h120250821072217142100000007/676dab110ef16dc5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:targetgroup/h120250821072217142100000007/676dab110ef16dc5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "h120250821072217142100000007",
            "name_prefix": "h1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-024732791d1f594df"
          },
          "dependencies": [
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ex-instance2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:targetgroup/h120250821072217142000000006/47a90606510290f9",
            "arn_suffix": "targetgroup/h120250821072217142000000006/47a90606510290f9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:targetgroup/h120250821072217142000000006/47a90606510290f9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "h120250821072217142000000006",
            "name_prefix": "h1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-024732791d1f594df"
          },
          "dependencies": [
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex-instance1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:targetgroup/h120250821072217142100000007/676dab110ef16dc5-20250821072224184200000009",
            "port": 80,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:targetgroup/h120250821072217142100000007/676dab110ef16dc5",
            "target_id": "i-0783ceccc395031eb"
          },
          "dependencies": [
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.data.aws_partition.current",
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ]
        },
        {
          "index_key": "ex-instance2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:targetgroup/h120250821072217142000000006/47a90606510290f9-20250821072224180200000008",
            "port": 80,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:637423553894:targetgroup/h120250821072217142000000006/47a90606510290f9",
            "target_id": "i-0c6669ef9658d2778"
          },
          "dependencies": [
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.data.aws_partition.current",
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group/sg-01352c51575931e1b",
            "description": "Security group for web-alb application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01352c51575931e1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS web traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-alb-20250821072217140300000005",
            "name_prefix": "web-alb-",
            "owner_id": "637423553894",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-024732791d1f594df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-07de84c208c3ed9e3",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07de84c208c3ed9e3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-01352c51575931e1b",
            "security_group_rule_id": "sgr-07de84c208c3ed9e3",
            "tags": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-04c9c9b03ba584f8d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP web traffic",
            "from_port": 80,
            "id": "sgr-04c9c9b03ba584f8d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-01352c51575931e1b",
            "security_group_rule_id": "sgr-04c9c9b03ba584f8d",
            "tags": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ]
        },
        {
          "index_key": "all_https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-0c0cf09ba8adc5aea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS web traffic",
            "from_port": 443,
            "id": "sgr-0c0cf09ba8adc5aea",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-01352c51575931e1b",
            "security_group_rule_id": "sgr-0c0cf09ba8adc5aea",
            "tags": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example",
              "terraform-aws-modules": "alb"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.ec2_instance.aws_ebs_volume.this",
            "module.ec2_instance.aws_ec2_tag.spot_instance",
            "module.ec2_instance.aws_eip.this",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.aws_volume_attachment.this",
            "module.ec2_instance.aws_vpc_security_group_egress_rule.this",
            "module.ec2_instance.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:subnet/subnet-06095cf777be79aed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06095cf777be79aed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423553894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024732791d1f594df"
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09b024e886d7bbe74",
            "arn": "arn:aws:ec2:eu-west-1:637423553894:instance/i-0783ceccc395031eb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:637423553894:key/f24c5c41-91fc-4c33-92ff-b827393d142b",
                "throughput": 200,
                "volume_id": "vol-0bfb7376f794ad14d",
                "volume_size": 20,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:637423553894:key/f24c5c41-91fc-4c33-92ff-b827393d142b",
                "throughput": 200,
                "volume_id": "vol-0c701da64c2fc6f63",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0783ceccc395031eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0105eacc59b8c25eb",
            "private_dns": "ip-10-0-1-193.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a3fe8b04db4faf4e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06095cf777be79aed",
            "tags": {
              "Name": "web-1"
            },
            "tags_all": {
              "Name": "web-1"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "MountPoint": "/dataB",
              "Name": "web-1",
              "name": "dataB"
            },
            "vpc_security_group_ids": [
              "sg-01389baeb7ae29407",
              "sg-029c73abc3fd8817e"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group/sg-01389baeb7ae29407",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01389baeb7ae29407",
            "ingress": [],
            "name": "web-1-20250821042707949000000002",
            "name_prefix": "web-1-",
            "owner_id": "637423553894",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-1"
            },
            "tags_all": {
              "Name": "web-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-024732791d1f594df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-0170cd91c51e9022a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0170cd91c51e9022a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-01389baeb7ae29407",
            "security_group_rule_id": "sgr-0170cd91c51e9022a",
            "tags": {
              "Name": "web-1-ipv4_default"
            },
            "tags_all": {
              "Name": "web-1-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-0aaf45cacfda4cc69",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0aaf45cacfda4cc69",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-01389baeb7ae29407",
            "security_group_rule_id": "sgr-0aaf45cacfda4cc69",
            "tags": {
              "Name": "web-1-ipv6_default"
            },
            "tags_all": {
              "Name": "web-1-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_instance[1]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:subnet/subnet-0dad1d5068af2aae6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dad1d5068af2aae6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423553894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-024732791d1f594df"
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_instance[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_instance[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09b024e886d7bbe74",
            "arn": "arn:aws:ec2:eu-west-1:637423553894:instance/i-0c6669ef9658d2778",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:637423553894:key/f24c5c41-91fc-4c33-92ff-b827393d142b",
                "throughput": 200,
                "volume_id": "vol-08e0837a5f6feb11b",
                "volume_size": 20,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:637423553894:key/f24c5c41-91fc-4c33-92ff-b827393d142b",
                "throughput": 200,
                "volume_id": "vol-02ab416952db3bf76",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6669ef9658d2778",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0673b3374bd429af9",
            "private_dns": "ip-10-0-0-49.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.49",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08b4e88c92d323264",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dad1d5068af2aae6",
            "tags": {
              "Name": "web-2"
            },
            "tags_all": {
              "Name": "web-2"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "MountPoint": "/dataC",
              "Name": "web-2",
              "name": "dataC"
            },
            "vpc_security_group_ids": [
              "sg-029c73abc3fd8817e",
              "sg-096d83d822f4c38a2"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[1]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group/sg-096d83d822f4c38a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096d83d822f4c38a2",
            "ingress": [],
            "name": "web-2-20250821042707949100000003",
            "name_prefix": "web-2-",
            "owner_id": "637423553894",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-2"
            },
            "tags_all": {
              "Name": "web-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-024732791d1f594df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[1]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-09b9115b74ce905c0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-09b9115b74ce905c0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-096d83d822f4c38a2",
            "security_group_rule_id": "sgr-09b9115b74ce905c0",
            "tags": {
              "Name": "web-2-ipv4_default"
            },
            "tags_all": {
              "Name": "web-2-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-048e711d471a297b7",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-048e711d471a297b7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-096d83d822f4c38a2",
            "security_group_rule_id": "sgr-048e711d471a297b7",
            "tags": {
              "Name": "web-2-ipv6_default"
            },
            "tags_all": {
              "Name": "web-2-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.sg.aws_security_group.sg1",
            "module.sg.aws_vpc_security_group_egress_rule.allow_all_traffic_ipv4",
            "module.sg.aws_vpc_security_group_ingress_rule.allow_tls_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance[1]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group/sg-029c73abc3fd8817e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029c73abc3fd8817e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "maeve_sg1",
            "name_prefix": "",
            "owner_id": "637423553894",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024732791d1f594df"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        },
        {
          "deposed": "dc122712",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423553894:security-group/sg-054f208f0f074aa83",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-054f208f0f074aa83",
            "ingress": [],
            "name": "maeve_sg1",
            "name_prefix": "",
            "owner_id": "637423553894",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae49e597bda9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-064d0f276c3824730",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-064d0f276c3824730",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-029c73abc3fd8817e",
            "security_group_rule_id": "sgr-064d0f276c3824730",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.sg1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:637423553894:security-group-rule/sgr-07154d0a56b829bde",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-07154d0a56b829bde",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-029c73abc3fd8817e",
            "security_group_rule_id": "sgr-07154d0a56b829bde",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.sg1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423553894:vpc/vpc-0ae49e597bda9bcbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f0468bd52259ff1",
            "default_route_table_id": "rtb-0a05d7f37d93cdd8b",
            "default_security_group_id": "sg-039e2cfac62c6e56c",
            "dhcp_options_id": "dopt-0a42a7e66a982cba0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae49e597bda9bcbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a05d7f37d93cdd8b",
            "owner_id": "637423553894",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}